--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -16,6 +16,7 @@
         android:id="@+id/title_dialog_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
         android:gravity="start|center" />
 
 </LinearLayout>
