--- a/app/src/main/res/layout/fragment_advanced_search_settings.xml
+++ b/app/src/main/res/layout/fragment_advanced_search_settings.xml
@@ -6,13 +6,6 @@
     android:orientation="vertical"
     tools:context=".view.fragment.AdvancedSearchSettingsFragment">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/advanced_search_view"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="@string/advanced_search_hint" />
-
-
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/cuisine_switch"
         android:layout_width="match_parent"
@@ -25,7 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/include_cuisine_button_text" />
-
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/diet_switch"
@@ -77,8 +69,7 @@
         android:id="@+id/advanced_search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/advanced_search_button"
-        android:layout_gravity="center"/>
-
+        android:layout_gravity="center"
+        android:text="@string/advanced_search_button" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
