--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_cook" />
+        android:src="@drawable/ic_cheaf"
+        android:contentDescription="@string/profile_avatar_description" />
 
     <TextView
         android:id="@+id/profile_status"
