--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--    dish_overview-->
+    <dimen name="recipe_overview_margin">5dp</dimen>
+    <dimen name="recipe_overview_dish_image_height">300dp</dimen>
+    <dimen name="recipe_overview_dish_link_margin">10dp</dimen>
+    <dimen name="recipe_overview_icon_size">50dp</dimen>
+
     <!--    dialog_item-->
     <dimen name="dialog_item_padding_end">10dp</dimen>
     <dimen name="dialog_item_padding_start">5dp</dimen>
@@ -23,19 +29,25 @@
     <dimen name="profile_create_new_width">150dp</dimen>
     <dimen name="profile_sign_width">150dp</dimen>
 
-    <!--    fragment_recipe_overview-->
-
-    <dimen name="recipe_overview_dish_image_height">300dp</dimen>
-    <dimen name="recipe_overview_dish_link_margin">10dp</dimen>
-    <dimen name="recipe_overview_icon_size">50dp</dimen>
-
     <!--    fragment_settings-->
 
     <dimen name="settings_menu_item_height">50dp</dimen>
 
     <!--    ingredient_item-->
 
-    <dimen name="ingredient_item_root_height">35dp</dimen>
-    <dimen name="ingredient_item_image_width">60dp</dimen>
-    <dimen name="ingredient_item_image_margin_end">10dp</dimen>
+    <dimen name="ingredient_item_root_height">100dp</dimen>
+    <dimen name="ingredient_item_image_size">100dp</dimen>
+    <dimen name="ingredient_item_margin_start">5dp</dimen>
+
+    <!--    equipment_item-->
+    <dimen name="equipment_item_root_height">100dp</dimen>
+    <dimen name="equipment_item_image_size">100dp</dimen>
+    <dimen name="equipment_item_margin_start">5dp</dimen>
+
+    <!--    step_item-->
+    <dimen name="step_item_margin">5dp</dimen>
+
+<!--    instructions_item-->
+    <dimen name="instructions_item_margin">5dp</dimen>
+
 </resources>
