--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,10 +9,16 @@
         android:title="@string/menu_title_home" />
 
     <item
-        android:id="@id/advancedSearchFragment"
+        android:id="@id/advancedSearchSettingsFragment"
         android:checkable="true"
         android:icon="@drawable/ic_search"
         android:title="@string/menu_title_search" />
+
+    <item
+        android:id="@id/markedFragment"
+        android:checkable="true"
+        android:icon="@drawable/ic_marks"
+        android:title="@string/menu_title_marked" />
 
     <item
         android:id="@id/profileFragment"
