--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -5,6 +5,7 @@
     <item name="settingsFragment" type="id"/>
     <item name="advancedSearchSettingsFragment" type="id"/>
     <item name="advancedSearchFragment" type="id"/>
+    <item name="markedFragment" type="id"/>
     <item name="detailsFragment" type="id"/>
 
 
