Made a nutrient screen. The detail screen is complete. Added the ability to share a link to a recipe.

--- a/app/src/main/res/drawable/marked_selector.xml
+++ b/app/src/main/res/drawable/marked_selector.xml
@@ -3,7 +3,7 @@
     <item android:state_checked="true"
         android:drawable="@drawable/ic_marked"/>
     <item android:state_checked="false"
-        android:drawable="@drawable/ic_unmaked"
+        android:drawable="@drawable/ic_unmarked"
         />
 
 </selector>
