--- a/app/src/main/res/layout/dish_item.xml
+++ b/app/src/main/res/layout/dish_item.xml
@@ -29,7 +29,8 @@
             android:id="@+id/dish_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dish_name_margin_top"
+            android:layout_marginBottom="@dimen/dish_name_margin_bottom"
+            android:layout_gravity="bottom"
             android:background="#CCFFFFFF"
             android:ellipsize="end"
             android:maxLines="1"
@@ -42,7 +43,7 @@
             android:id="@+id/dish_mark_check_box"
             android:layout_width="@dimen/dish_mark_check_box_size"
             android:layout_height="@dimen/dish_mark_check_box_size"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="top|end"
             android:layout_margin="@dimen/dish_mark_check_box_margin"
             android:background="@drawable/marked_selector"
             android:button="@null"
