--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="dish_overview_icon_size">50dp</dimen>
     <dimen name="dish_overview_mark_check_box_margin">10dp</dimen>
     <dimen name="dish_overview_mark_check_box_size">30dp</dimen>
+    <dimen name="overview_fab_margin">10dp</dimen>
 
     <!--    dialog_item-->
     <dimen name="dialog_item_padding_end">10dp</dimen>
@@ -20,10 +21,11 @@
     <dimen name="recently_viewed_label_text_size">16sp</dimen>
     <dimen name="recently_viewed_label_height">90dp</dimen>
     <dimen name="main_recently_viewed_height">700dp</dimen>
+    <dimen name="recently_viewed_fab">10dp</dimen>
 
     <!--    dish_item-->
 
-    <dimen name="dish_name_margin_top">20dp</dimen>
+    <dimen name="dish_name_margin_bottom">20dp</dimen>
     <dimen name="dish_mark_check_box_margin">10dp</dimen>
     <dimen name="dish_mark_check_box_size">30dp</dimen>
     <dimen name="dish_name_padding">5dp</dimen>
