--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_recently_viewed"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/main_recently_viewed_height"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:behavior_hideable="true"
             app:behavior_peekHeight="@dimen/main_recently_viewed_peek_height"
@@ -72,24 +72,25 @@
                 android:layout_height="@dimen/recently_viewed_label_height"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_cloche"
+                android:clickable="true"
                 android:gravity="center"
                 android:text="@string/recently_viewed_label_title"
                 android:textColor="@color/white"
                 android:textSize="@dimen/recently_viewed_label_text_size"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="KeyboardInaccessibleWidget" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recently_viewed_recycler"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:context=".view.fragment.HomeFragment"
-                tools:listitem="@layout/dish_item"
-                app:layout_constraintTop_toBottomOf="@id/recently_viewed_label"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/recently_viewed_label"
+                tools:listitem="@layout/dish_item" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -97,7 +98,7 @@
             android:id="@+id/recently_viewed_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/recently_viewed_fab"
             android:contentDescription="@string/recently_viewed_fab_description"
             android:src="@drawable/ic_history"
             android:visibility="gone"
