--- a/app/src/main/res/layout/dish_item.xml
+++ b/app/src/main/res/layout/dish_item.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dish_name_margin_bottom"
             android:layout_gravity="bottom"
-            android:background="#CCFFFFFF"
+            android:background="@color/white_alpha_80"
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="@dimen/dish_name_padding"
