--- a/app/src/main/res/layout/fragment_dish_overview.xml
+++ b/app/src/main/res/layout/fragment_dish_overview.xml
@@ -119,10 +119,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/overview_fab_margin"
+            android:contentDescription="@string/overview_mark_fab_description"
             android:src="@drawable/ic_unmarked_fab"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@id/recipe_overview_dish_image"
-            app:layout_constraintTop_toTopOf="@id/recipe_overview_dish_image"
-            android:contentDescription="@string/overview_mark_fab_description" />
+            app:layout_constraintTop_toTopOf="@id/recipe_overview_dish_image" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/overview_reminder_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/overview_fab_margin"
+            android:contentDescription="@string/overview_mark_fab_description"
+            android:src="@drawable/ic_reminder"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/recipe_overview_dish_image"
+            app:layout_constraintTop_toBottomOf="@id/overview_mark_fab" />
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/overview_share_fab"
@@ -133,7 +146,7 @@
             android:src="@drawable/ic_share"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@id/recipe_overview_dish_image"
-            app:layout_constraintTop_toBottomOf="@id/overview_mark_fab" />
+            app:layout_constraintTop_toBottomOf="@id/overview_reminder_fab" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
