--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <item
         android:id="@id/homeFragment"
         android:checkable="true"
         android:icon="@drawable/ic_home"
         android:title="@string/menu_title_home" />
-
     <item
         android:id="@id/advancedSearchSettingsFragment"
         android:checkable="true"
         android:icon="@drawable/ic_search"
         android:title="@string/menu_title_search" />
-
     <item
         android:id="@id/markedFragment"
         android:checkable="true"
         android:icon="@drawable/ic_marks"
         android:title="@string/menu_title_marked" />
-
+    <item
+        android:id="@id/dishRemindsFragment"
+        android:checkable="true"
+        android:icon="@drawable/ic_alarm"
+        android:title="@string/menu_title_dish_reminds" />
     <item
         android:id="@id/profileFragment"
         android:checkable="true"
         android:icon="@drawable/ic_profile"
         android:title="@string/menu_title_profile" />
-
     <item
         android:id="@id/settingsFragment"
         android:checkable="true"
         android:icon="@drawable/ic_settings"
         android:title="@string/menu_title_settings" />
-
     <group android:id="@id/functional">
         <item
             android:id="@id/logOutMenu"
@@ -39,5 +37,4 @@
             android:icon="@drawable/ic_clear"
             android:title="@string/menu_title_log_out" />
     </group>
-
 </menu>
