--- a/app/src/main/res/layout/nutrient_item.xml
+++ b/app/src/main/res/layout/nutrient_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="@dimen/nutrient_item_root_height"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/nutrient_title_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="15dp"
+        android:paddingStart="@dimen/nutrient_item_padding_start"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
     <TextView
         android:id="@+id/nutrient_percent_at_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="15dp"
+        android:paddingStart="@dimen/nutrient_item_padding_start"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
 
