Added the ability to change the theme in the settings.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,35 +10,38 @@
     <Spinner
         android:id="@+id/settings_theme_spinner"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="@dimen/settings_menu_item_height" />
 
     <TextView
         android:id="@+id/settings_diets"
-        android:text="@string/settings_title_diets"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_menu_item_height"/>
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_margin="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_title_diets"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
     <TextView
         android:id="@+id/settings_meal_types"
-        android:text="@string/settings_title_meal_types"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="@dimen/settings_menu_item_height"/>
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_margin="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_title_meal_types"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
     <TextView
         android:id="@+id/settings_intolerances"
-        android:text="@string/settings_title_intolerances"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_menu_item_height"/>
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_margin="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_title_intolerances"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
     <TextView
         android:id="@+id/settings_cuisine"
-        android:text="@string/settings_title_cuisine"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_menu_item_height"/>
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_margin="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_title_cuisine"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
 </LinearLayout>
