--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_settings"
     android:layout_width="match_parent"
@@ -7,41 +8,45 @@
     android:orientation="vertical"
     tools:context=".view.fragment.SettingsFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:layout_marginEnd="@dimen/settings_menu_item_margin"
+        android:gravity="start|center"
+        android:text="@string/settings_title_appearance"
+        android:textColor="@color/app_color_1"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_menu_item_subtitle_margin"
+        android:layout_marginTop="@dimen/settings_menu_item_margin"
+        android:gravity="start|bottom"
+        android:text="@string/settings_title_night_mode"
+        android:textColor="@color/app_color_1"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+
     <Spinner
         android:id="@+id/settings_theme_spinner"
+        android:background="@drawable/ic_spinner"
+        android:backgroundTint="@color/black"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_menu_item_height"
-        android:layout_marginTop="@dimen/settings_menu_item_margin" />
+        android:prompt="@color/app_color_1"
+        android:layout_marginEnd="@dimen/settings_menu_item_margin" />
 
     <TextView
-        android:id="@+id/settings_diets"
         android:layout_width="match_parent"
         android:layout_height="@dimen/settings_menu_item_height"
         android:layout_marginStart="@dimen/settings_menu_item_margin"
         android:layout_marginTop="@dimen/settings_menu_item_margin"
         android:layout_marginEnd="@dimen/settings_menu_item_margin"
-        android:text="@string/settings_title_diets"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-    <TextView
-        android:id="@+id/settings_meal_types"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_menu_item_height"
-        android:layout_marginStart="@dimen/settings_menu_item_margin"
-        android:layout_marginTop="@dimen/settings_menu_item_margin"
-        android:layout_marginEnd="@dimen/settings_menu_item_margin"
-        android:text="@string/settings_title_meal_types"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-    <TextView
-        android:id="@+id/settings_intolerances"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_menu_item_height"
-        android:layout_marginStart="@dimen/settings_menu_item_margin"
-        android:layout_marginTop="@dimen/settings_menu_item_margin"
-        android:layout_marginEnd="@dimen/settings_menu_item_margin"
-        android:text="@string/settings_title_intolerances"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:gravity="start|center"
+        android:text="@string/settings_title_personal_preferences"
+        android:textColor="@color/app_color_1"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
     <TextView
         android:id="@+id/settings_cuisine"
@@ -50,7 +55,74 @@
         android:layout_marginStart="@dimen/settings_menu_item_margin"
         android:layout_marginTop="@dimen/settings_menu_item_margin"
         android:layout_marginEnd="@dimen/settings_menu_item_margin"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="start|center"
         android:text="@string/settings_title_cuisine"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:drawableRightCompat="@drawable/ic_keyboard_arrow_right"
+        app:drawableTint="@color/black" />
+
+    <TextView
+        android:id="@+id/settings_diets"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:layout_marginTop="@dimen/settings_menu_item_margin"
+        android:layout_marginEnd="@dimen/settings_menu_item_margin"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="start|center"
+        android:text="@string/settings_title_diets"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:drawableRightCompat="@drawable/ic_keyboard_arrow_right"
+        app:drawableTint="@color/black" />
+
+    <TextView
+        android:id="@+id/settings_meal_types"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:layout_marginTop="@dimen/settings_menu_item_margin"
+        android:layout_marginEnd="@dimen/settings_menu_item_margin"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="start|center"
+        android:text="@string/settings_title_meal_types"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:drawableRightCompat="@drawable/ic_keyboard_arrow_right"
+        app:drawableTint="@color/black" />
+
+    <TextView
+        android:id="@+id/settings_intolerances"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/settings_menu_item_height"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:layout_marginTop="@dimen/settings_menu_item_margin"
+        android:layout_marginEnd="@dimen/settings_menu_item_margin"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="start|center"
+        android:text="@string/settings_title_intolerances"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:drawableRightCompat="@drawable/ic_keyboard_arrow_right"
+        app:drawableTint="@color/black" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/settings_profile_preferences_switch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_profile_preferences_switch_description"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/settings_metric_switch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/settings_menu_item_margin"
+        android:text="@string/settings_title_metric"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
 
 </LinearLayout>
