--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,9 +42,12 @@
     <dimen name="profile_create_new_width">150dp</dimen>
     <dimen name="profile_sign_width">150dp</dimen>
 
+    <!--    fragment_advanced_search_settings-->
+    <dimen name="advanced_search_settings_menu_item_margin">5dp</dimen>
     <!--    fragment_settings-->
     <dimen name="settings_menu_item_height">50dp</dimen>
     <dimen name="settings_menu_item_margin">5dp</dimen>
+    <dimen name="settings_menu_item_subtitle_margin">10dp</dimen>
 
     <!--    ingredient_item-->
     <dimen name="ingredient_item_root_height">100dp</dimen>
